edited the code

--- a/src/njk/pirate-ships.njk
+++ b/src/njk/pirate-ships.njk
@@ -1,5 +1,9 @@
 {% extends '_templates/base.njk' %}
 
+{% block page_title %}Ships of the Golden Age of pirates{% endblock %}
+
+{% block page_description %}The index search description for this page goes here.{% endblock %}
+
 {% block content %}
 <article class="container">
   <h1>Ships of the Golden Age of pirates</h1>
